--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Forth Inspired WebAssembler",
   "main": "index.js",
+  "type":"module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test.js",
     "dev":"esbuild --bundle --watch --format=iife index.ts --outfile=dist/index.js"
   },
   "repository": {
